<package format="2">
  <name>geom_cast_extra</name>
  <version>0.0.1</version>
  <description>
      This is a companion package to `geom_cast`. It adds extra conversions
      to/from PCL and OpenCV data types.
  </description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <maintainer email="dimatura@cmu.edu">Daniel Maturana</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>

  <!--<url type="website">http://wiki.ros.org/pyvox</url> -->

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cmake_modules</depend>
  <depend>geom_cast</depend>
  <depend>libopencv-dev</depend>
  <depend>libopencv</depend>
  <depend>libpcl-all-dev</depend>
  <depend>libpcl-all</depend>
  <depend>roscpp</depend>

</package>
